manifests/showks-canvas-tsukaman/manifest.yaml
---
# Source: showks-canvas/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: showks-canvas-tsukaman
  namespace: showks
  labels:
    app: showks-canvas-tsukaman
    class: showks-canvas
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: app-port
  selector:
    app: showks-canvas-tsukaman

---
# Source: showks-canvas/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: showks-canvas-tsukaman
  namespace: showks
  labels:
    app: showks-canvas-tsukaman
    class: showks-canvas
spec:
  replicas: 1
  selector:
    matchLabels:
      app: showks-canvas-tsukaman
  template:
    metadata:
      labels:
        app: showks-canvas-tsukaman
        class: showks-canvas
    spec:
      containers:
        - name: showks-canvas-tsukaman
          image: gcr.io/ipc-containerdays/showks-canvas-tsukaman:prod-223e3bd0a84c393f99db419b4af3ddbb54fab9c3
          ports:
            - name: app-port
              containerPort: 8080
              protocol: TCP

---
# Source: showks-canvas/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: showks-canvas-tsukaman
  namespace: showks
  labels:
    class: showks-canvas
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: showks-canvas-tsukaman.prod.showks.containerdays.jp
    http:
      paths:
      - path: /
        backend:
          serviceName: showks-canvas-tsukaman
          servicePort: 8080
